name:                tower-examples
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

executable tower-example-simple
  main-is:             Simple.hs
  other-modules:       Examples
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       tower >= 0.9,
                       tower-freertos >= 0.9
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010

executable tower-example-simplesignal
  main-is:             SimpleSignal.hs
  other-modules:       Examples
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       tower >= 0.9,
                       tower-freertos >= 0.9
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010

executable tower-example-stm32f4signals
  main-is:             App.hs
  other-modules:       ATIM18,
                       ATIM18.RegTypes,
                       ATIM18.Regs,
                       ATIM18.Peripheral,
                       Interrupt,
                       Interrupt.API,
                       Interrupt.Regs,
                       Interrupt.Types,
                       MemoryMap,
                       RCC,
                       RCC.Class,
                       RCC.GetFreq,
                       RCC.Regs,
                       RCC.RegTypes
  default-language:    Haskell2010

  hs-source-dirs:      STM32F4
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       ivory-hw,
                       tower >= 0.9,
                       tower-freertos >= 0.9
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010

executable freertos-bindings-test
  main-is:             Main.hs
  hs-source-dirs:      freertos-bindings-test
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory,
                       ivory-backend-c,
                       ivory-freertos-bindings
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
  default-language:    Haskell2010
