name:                tower-freertos
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: support/stm32_init.c,
            support/stm32_init.h,
            support/stm32_ivory_init.c,
            support/stm32_ivory_init.h,
            support/stm32f405_vectors.s,
            support/stm32f405.lds

library
  exposed-modules:      Ivory.OS.FreeRTOS.Tower,
                        Ivory.OS.FreeRTOS.Tower.STM32F4,
                        Ivory.OS.FreeRTOS.Tower.STM32F4.Build,
                        Ivory.OS.FreeRTOS.Tower.Init,
                        Ivory.OS.FreeRTOS.Tower.Monitor,
                        Ivory.OS.FreeRTOS.Tower.Signal,
                        Ivory.OS.FreeRTOS.Tower.System

  other-modules:        Paths_tower_freertos

  build-depends:        base >= 4.6,
                        template-haskell >= 2.8,
                        filepath,
                        containers,
                        mainland-pretty,
                        pretty-show,
                        ivory,
                        ivory-hw,
                        ivory-artifact,
                        ivory-stdlib,
                        ivory-backend-c,
                        ivory-freertos-bindings,
                        tower >= 0.9

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

