name:                tower-frontend
version:             0.8.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.Tower.Frontend,
                        Ivory.Tower.Frontend.Options

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        ivory,
                        ivory-opts,
                        ivory-backend-c,
                        ivory-backend-aadl,
                        ivory-stdlib,
                        tower           >= 0.8,
                        tower-freertos  >= 0.8,
                        tower-reporting >= 0.8

  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

