name:                tower-hal
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Ivory.Tower.HAL.RingBuffer,
                       Ivory.Tower.HAL.Sensor.Magnetometer,
                       Ivory.Tower.HAL.Sensor.Gyroscope,
                       Ivory.Tower.HAL.Sensor.Barometer,
                       Ivory.Tower.HAL.Sensor.Accelerometer,
                       Ivory.Tower.HAL.Bus.CAN,
                       Ivory.Tower.HAL.Bus.Interface,
                       Ivory.Tower.HAL.Bus.Sched,
                       Ivory.Tower.HAL.Bus.I2C,
                       Ivory.Tower.HAL.Bus.UART,
                       Ivory.Tower.HAL.Bus.SPI,
                       Ivory.Tower.HAL.Bus.SPI.DeviceHandle,
                       Ivory.Tower.HAL.Bus.CAN.Sched,
                       Ivory.Tower.HAL.Bus.CAN.Fragment,
                       Ivory.Tower.HAL.Bus.I2C.DeviceAddr
  build-depends:       base >=4.6,
                       ivory,
                       ivory-serialize,
                       ivory-stdlib,
                       tower
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
