name:                tower-opts
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          leepike@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
                        -- Exports
  exposed-modules:      Ivory.Tower.Opts,

                        Ivory.Tower.Opts.LockCoarsening,
                        Ivory.Tower.Opts.LockCoarsening.StaticAnalysis,
                        Ivory.Tower.Opts.LockCoarsening.LockOptimize

  build-depends:        base >= 4.6,
                        base-compat >= 0.6,
                        symbol,
                        parallel-io,
                        random,
                        random-source,
                        process,
                        enclosed-exceptions,
                        split,
                        directory,
                        maximal-cliques,
                        monadLib,
                        monad-loops,
                        containers,
                        ghc-prim,
                        semigroups,
                        mainland-pretty,
                        text,
                        filepath,
                        ivory,
                        ivory-artifact,
                        ivory-stdlib,
                        ivory-backend-c,
                        tower

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall