name:                tower-reporting
version:             0.8.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Tower.Reporting.Entrypoints,
                        Ivory.Tower.Reporting.Graphviz

  build-depends:        base >= 4.6,
                        ivory,
                        ivory-stdlib,
                        tower-freertos,
                        tower >= 0.8,
                        wl-pprint,
                        xml

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

