name:                tower-statemachine
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Tower.StateMachine,
                        Ivory.Tower.StateMachine.Compile,
                        Ivory.Tower.StateMachine.Monad,
                        Ivory.Tower.StateMachine.Example

  build-depends:        base >= 4.6,
                        monadLib,
                        ivory,
                        ivory-stdlib,
                        tower >= 0.9

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans

