name:                tower
version:             0.9.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
                        -- Exports
  exposed-modules:      Ivory.Tower,

                        -- Surface syntax:
                        Ivory.Tower.Coroutine,
                        Ivory.Tower.Tower,
                        Ivory.Tower.Monitor,
                        Ivory.Tower.Handler,

                        -- AST
                        Ivory.Tower.AST,
                        Ivory.Tower.AST.Comment,
                        Ivory.Tower.AST.Chan,
                        Ivory.Tower.AST.Emitter,
                        Ivory.Tower.AST.Graph,
                        Ivory.Tower.AST.Handler,
                        Ivory.Tower.AST.Init,
                        Ivory.Tower.AST.Monitor,
                        Ivory.Tower.AST.Period,
                        Ivory.Tower.AST.Signal,
                        Ivory.Tower.AST.SyncChan,
                        Ivory.Tower.AST.Thread,
                        Ivory.Tower.AST.Tower,

                        -- Code generation
                        Ivory.Tower.Backend,

                        -- Compiler
                        Ivory.Tower.Options,

                        -- Monads
                        Ivory.Tower.Monad.Base,
                        Ivory.Tower.Monad.Handler,
                        Ivory.Tower.Monad.Monitor,
                        Ivory.Tower.Monad.Tower,

                        -- Types
                        Ivory.Tower.Types.Chan,
                        Ivory.Tower.Types.Dependencies,
                        Ivory.Tower.Types.Emitter,
                        Ivory.Tower.Types.SignalCode,
                        Ivory.Tower.Types.Signalable,
                        Ivory.Tower.Types.ThreadCode,
                        Ivory.Tower.Types.Time,
                        Ivory.Tower.Types.Unique,

                        -- SrcLoc
                        Ivory.Tower.SrcLoc.Location

  other-modules:        Ivory.Tower.Types.ChanMap

  build-depends:        base >= 4.6,
                        base-compat >= 0.6,
                        monadLib,
                        containers,
                        mainland-pretty >= 0.4.0.0,
                        text,
                        filepath,
                        ivory,
                        ivory-artifact,
                        ivory-stdlib,
                        ivory-backend-c

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
