name:                towerprime-examples
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

executable towerprime-example-simple
  main-is:             Simple.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       towerprime,
                       towerprime-freertos,
                       towerprime-frontend
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

executable towerprime-example-simplesignal
  main-is:             SimpleSignal.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       towerprime,
                       towerprime-freertos,
                       towerprime-frontend
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
