name:                towerprime-freertos
version:             0.1.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

data-files: ivory-freertos-wrapper/freertos_semaphore_wrapper.h,
            ivory-freertos-wrapper/freertos_semaphore_wrapper.c,
            ivory-freertos-wrapper/freertos_task_wrapper.h,
            ivory-freertos-wrapper/freertos_task_wrapper.c

library
  exposed-modules:      Ivory.Tower.Compile.FreeRTOS,
                        Ivory.Tower.Compile.FreeRTOS.EventNotify,
                        Ivory.Tower.Compile.FreeRTOS.MsgQueue,
                        Ivory.Tower.Compile.FreeRTOS.SearchDir,
                        Ivory.OS.FreeRTOS.Semaphore,
                        Ivory.OS.FreeRTOS.Task,
                        Ivory.OS.FreeRTOS.TaskArg

  other-modules:        Paths_towerprime_freertos

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        xml,
                        ivory,
                        ivory-stdlib,
                        towerprime

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
