name:                towerprime-frontend
version:             0.0.1.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

flag werror
  default:              False
  description:          Pass -Werror to GHC.

library
  exposed-modules:      Ivory.Tower.Frontend,
                        Ivory.Tower.Frontend.Options

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        ivory,
                        ivory-opts,
                        ivory-backend-c,
                        ivory-backend-aadl,
                        ivory-stdlib,
                        towerprime,
                        towerprime-freertos

  hs-source-dirs:       src
  default-language:     Haskell2010
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall

executable towerprime-example-simple
  main-is:             Simple.hs
  hs-source-dirs:      examples
  ghc-options:          -Wall
  build-depends:       base >= 4.6,
                       ivory-bitdata,
                       ivory,
                       ivory-stdlib,
                       ivory-backend-c,
                       towerprime,
                       towerprime-freertos,
                       towerprime-frontend
  if flag(werror)
    ghc-options:        -Wall -Werror
  else
    ghc-options:        -Wall
