name:                towerprime
version:             0.7.0.0
author:              Galois, Inc.
maintainer:          pat@galois.com
category:            Language
build-type:          Simple
cabal-version:       >= 1.10
license:             BSD3

library
  exposed-modules:      Ivory.Tower,
                        Ivory.Tower.AST,
                        Ivory.Tower.AST.ChanReader,
                        Ivory.Tower.AST.Chan,
                        Ivory.Tower.AST.Directory,
                        Ivory.Tower.AST.EventHandler,
                        Ivory.Tower.AST.Event,
                        Ivory.Tower.AST.System,
                        Ivory.Tower.AST.Task,
                        Ivory.Tower.AST.Timer,
                        Ivory.Tower.Monad.Base,
                        Ivory.Tower.Monad.Task,
                        Ivory.Tower.Monad.Tower,
                        Ivory.Tower.Types,
                        Ivory.Tower.Types.OS,
                        Ivory.Tower.Types.Time,
                        Ivory.Tower.Types.Unique,
                        Ivory.Tower.Test.TaskTest

  build-depends:        base >= 4.6,
                        srcloc,
                        template-haskell >= 2.8,
                        directory,
                        filepath,
                        process,
                        cmdlib >= 0.3.5,
                        containers,
                        wl-pprint,
                        monadLib,
                        ivory,
                        ivory-stdlib,
                        xml

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-orphans
